--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site
 title:              Brandon Severin
 bio:                'A.I. for Quantum Computing'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+description:        "Brandon Severin"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://brandonseverin.github.io/Moon
+url:                http://localhost:4000
 
 # Jekyll
 permalink:          /:title/
