--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Brandon Severin
-bio:                'A.I. for Quantum Computing'
+bio:                "A.I. for Quantum Computing PhD student in the [Natalia Ares Group](https://www.natalia-ares.com/) at the [University of Oxford](https://www.materials.ox.ac.uk/) researching *A.I. for Qubit Readout*. President of the Oxford Blockchain Society. MEng in *Materials Science*, St Catherine's College (2015), University of Oxford."
 description:        "Brandon Severin"
 reading_time:       true
 words_per_minute:   200
